# Drift-Guard

./: .env.example  .evn.example  .gitignore  .pre-commit-config.yaml  1-master_plan.md  2-implementation_plan.md  3-tasks.md  4-design_guidelines.md  5-user_journey.md  Dockerfile  README.md  alembic.ini  design_guidelines.md  docker-compose.yml  implementation_plan.md  master_plan.md  pyproject.toml  tasks.md  test_k8s_connection.py  user_journey.md
.doc/: 1-master_plan.md  2-implementation_plan.md  3-tasks.md  4-design_guidelines.md  5-user_journey.md  Drift Guard Issue Fix Log.md  phase-1-3-code-review-report.md  teaching_approach.md
alembic/: env.py
alembic/versions/: 04c74d378803_create_all_tables.py  3ac45cd3e0fe_add_path_to_documents.py  712f3d8f59f9_initial.py  9d2d6d6a4c3b_add_latest_version_fk_to_documents.py
app/: config.py  database.py  main.py
app/api/v1/: documents.py  sources.py
app/dependencies/: auth.py
app/models/: __init__.py  alert.py  audit_job.py  document.py  document_version.py  entity.py  runbook_score.py  source.py
app/schemas/: __init__.py  alert.py  audit_job.py  document.py  score.py  source.py
app/services/evidence/: __init__.py  evidence_store.py  github_collector.py  http_collector.py  kubernetes_collector.py  pagerduty_collector.py
tests/: conftest.py
tests/integration/: test_documents.py  test_sources.py
tests/unit/: test_evidence_store.py  test_extractors.py  test_git_ingestor.py  test_github_collector.py  test_http_collector.py  test_kubernetes_collector.py  test_models.py  test_pagerduty_collector.py
(+13 files in other folders)
